fixed project section on mobile

--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ img {
 #content {
 	display: flex;
 	flex-direction: column;
+	margin:auto;
 }
 
 /*Styling for navbar*/
@@ -164,11 +165,10 @@ img {
 	background-color:#fff;
 	width:100%;
 	text-align: center;
-	height:7.5rem;
+	height:9.5rem;
 }
 
-#about-me-header {
-	font-family: 'Indie Flower', cursive;
+#about-me-h1 {
 	font-size:4.5rem;
 	color:#ff9999;	
 }
@@ -195,7 +195,7 @@ img {
 	cursor: pointer;
 }
 i {
-	border: solid black;
+  border: solid black;
   border-width: 0px 3px 3px 0;
   display: inline-block;
   padding: 8px;
@@ -218,34 +218,32 @@ i {
 }
 
 #projects-container {
+	color:#fff;
 	display:flex;
 	flex-direction: column;
-	min-height:69rem
-	
+	max-width:100%;
 }
 
-#projects-header {
-	width:50%;
-	background-color: #fff;
-	display:flex;
-	align-items: center;
-	justify-content: center;
+#projects-title {
+	background-color:#fff;
+	max-width:100%;
+	text-align: center;
+	height:9.5rem;
 
 }
 
 #projects-h1 {
-	font-family: 'Indie Flower', cursive;
-	font-size:10rem;
-	color:#ff9999;	
+	font-size:4.5rem;
+	color:#ff9999;
 }
 
 #projects-content {
-	width:50%;
-	background: #ff9999;
-	display:flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+	margin:auto;
+	text-align: center;
+	max-width: 100%;
+	font-size:2rem;
+	padding:3rem;
+	background-color:#fff;
 	
 	
 }
@@ -253,14 +251,16 @@ i {
 #projects-img {
 	margin: 0 auto;
 	width: 82%;
-	height:30rem;
+	
 }
 
 #projects-text {
-	color: #fff;
+	margin:auto;
 	text-align: center;
-	font-size:2.4rem;
+	max-width: 100%;
+	font-size:2rem;
 	padding:3rem;
+	color:#000;
 }
 
 #contact-container {
